# AndoEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  build.sh  vcpkg-configuration.json  vcpkg.json
AndoEngine/: makefile
AndoEngine.xcodeproj/: project.pbxproj
AndoEngine.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
AndoEngine/include/AndoEngine/: BasicComponents.h  Context.h  EnumMacros.h  LinearAllocator.h  LinearContainers.h  LinearStrings.h
AndoEngine/include/Engine/: BasicComponents.h  Context.h  LinearAllocator.h  LinearStrings.h
AndoEngine/include/EntityFramework/: ComponentInfo.h  ComponentManager.h  Entity.h  EntityFrameworkTypes.h  EntityInfoComponent.h  EntitySystem.h  Serializer.h  Types.h
AndoEngine/include/EntitySystem/: CompInfo.h  CompManager.h  Config.h  Entity.h  EntityInfo.h  EntitySystem.h
AndoEngine/include/Reflection/: BasicProperty.h  MemberProperty.h  MemberPropertyEditor.h  Property.h  StaticProperty.h  TypeInfo.h
AndoEngine/include/Rendering/: AttributeBoolParameter.enum  AttributeIntParameter.enum  AttributePtrParameter.enum  AttributeTypeParameter.enum  BufferTarget.enum  GLBasicEnums.h  GLShader.h  GLType.enum  GLUniform.h  GLVertexArrayObject.h  GLVertexBufferObject.h  GLVertexData.h  MeshComponent.h  MeshRendererComponent.h  RenderingSystem.h  SDLSystems.h  Shader.enum  Shader.h  Uniform.h  VertexData.h
AndoEngine/src/AndoEngine/: LinearAllocator.cpp
AndoEngine/src/EntitySystem/: ComponentInfo.cpp  Entity.cpp  EntitySystem.cpp
AndoEngine/src/Rendering/: GLBasicEnums.cpp  GLShader.cpp  GLUniform.cpp  GLVertexArrayObject.cpp  GLVertexBufferObject.cpp  RenderingSystem.cpp
AndoEngineTest/: BasicComponents.h  EnumMacros.h  GLBasicEnums.cpp  GLBasicEnums.h  GLShader.cpp  GLShader.h  GLUniform.cpp  GLUniform.h  GLVertexArrayObject.cpp  GLVertexArrayObject.h  GLVertexBufferObject.cpp  GLVertexBufferObject.h  GLVertexData.h  MeshComponent.h  MeshRendererComponent.h  RenderingSystem.cpp  RenderingSystem.h  SDLSystems.h  ShaderComponent.h  ShaderProgramComponent.h  main.cpp
ECS/: Plan.txt
ECS/Private/Core/: Entity.cpp  EntitySystem.cpp
ECS/Public/ComponentInfo/: CompInfo.h  TCompInfo.h
ECS/Public/ComponentManager/: CompManager.h  TCompManager.h
ECS/Public/Core/: Entity.h  EntitySystem.h  General.h  OwnedComponent.h  (+1 more)
EditorLibrary/: CMakeLists.txt
EditorLibrary/source/Importers/: Importer.cpp  Importer.h  RenderingImporters.cpp  RenderingImporters.h
Generator/: commands.txt  compile.mk  makefile
Generator/source/: main.cpp
Reflection/Public/: MemberProperty.h  TypeInfo.h
TestExecutable/: makefile
TestExecutable/src/: main.cpp
Tests/: CMakeLists.txt  compile.mk  makefile
Tests/content/shaders/: attributes_simple.vert.incl  default.frag  default.vert  fragments_simple.frag.incl  uniforms_standard.incl
Tests/source/: PCH.h  main.cpp
make/: std_compile.mk  std_compile_shaders.mk
(+6 files in other folders)
